--- a/src/css/ImageSlider.css
+++ b/src/css/ImageSlider.css
@@ -1,6 +1,8 @@
 .dd-slide {
     width: 100%;
     height: 100%;
+    border-radius: 14px;
+    overflow: hidden;
 }
 .dd-slide img {
     width: 100%;
