--- a/src/index.css
+++ b/src/index.css
@@ -27,21 +27,19 @@ body {
   padding: 0;
   
 }
-body::-webkit-scrollbar {
+/* body::-webkit-scrollbar {
   width: 10px;
-  /* display: none; */
+  display: none;
 }
 
 body::-webkit-scrollbar-track {
   background: transparent;
-  /* box-shadow: none; */
 }
 
 body::-webkit-scrollbar-thumb {
   background: linear-gradient(180deg, #000000 0%, #353535 100%);
   outline: none;
-  /* border-radius: 30px; */
-}
+} */
 a {
   display: block;
   text-decoration: none;
