--- a/src/css/DonateSection.css
+++ b/src/css/DonateSection.css
@@ -20,7 +20,6 @@
   }
   
   .donate-section .secondry-heading {
-    font-size: 2.5rem;
     margin-bottom: 20px;
     color: #ff6f61;
   }
@@ -34,7 +33,7 @@
   
   .donate-btn {
     display: inline-block;
-    background-color: #ff6f61;
+    background-color: #f05b29;
     color: #fff;
     font-size: 1.1rem;
     font-weight: bold;
@@ -48,4 +47,13 @@
     background-color: #e65a50;
     transform: translateY(-3px);
   }
-  
+  @media screen  and (max-width:768px) {
+
+    .donate-text {
+    font-size: 1rem;
+    margin-bottom: 20px;
+  }
+  .donate-section {
+    padding: 40px 15px;
+  }
+  }
