--- a/src/css/CtaSection.css
+++ b/src/css/CtaSection.css
@@ -1,6 +1,7 @@
 .cta-section {
     padding: 100px 0;
     background: #000;
+    overflow: hidden;
 }
 .cta-section.cta-section.light {
     background: #fff;
@@ -29,6 +30,7 @@
     border-radius: 30px;
     overflow: hidden;
     height: 100%;
+    max-height: 400px;
 }
 .cta-img-wrapper img {
     height: 100%;
