--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -5,9 +5,14 @@ footer {
     padding: 80px 0;
     border-bottom: 1px solid #afaaaa;
 }
-footer .logo {
-    color: #fff;
-    margin-bottom: 60px;
+footer .footer-logo {
+    max-width: 90px;
+    margin-bottom: 40px;
+}
+footer .footer-logo img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 .link-list {
     max-width: 115px;
@@ -81,7 +86,7 @@ footer .icon {
     .footer-btm {
         padding: 15px 0;
     }
-    footer .logo {
+    footer .footer-logo {
         margin-bottom: 40px; 
     }
 }
@@ -90,7 +95,7 @@ footer .icon {
         padding: 50px 0 40px;
         border-bottom: 1px solid #afaaaa;
     }
-    footer .logo {
+    footer .footer-logo {
         text-align: center;
         font-size: 24px;
         margin: 0 auto 30px;
