--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -13,7 +13,7 @@
     border-bottom: 1px solid #AE1F24;
 }
 .logo {
-    max-width: 130px;
+    max-width: 330px;
    
 }
 
@@ -148,10 +148,10 @@ nav ul {
 }
 @media screen and (max-width: 1280px) {
     .logo {
-        font-size: 22px;
+        max-width: 250px;
     }
     nav {
-        max-width: 520px;
+        max-width: 470px;
     }
     .dd-inner.dd-programs {
         gap: 30px;
@@ -172,23 +172,32 @@ nav ul {
     .nav-dropdown-trigger {
         padding: 40px 8px;
     }
+    .nav-link-item {
+        font-size: 18px;
+    }
 }
 @media screen and (max-width: 992px) {
     .logo {
-        font-size: 18px;
+        max-width: 225px;
     }
     .nav-link-item {
-        font-size: 16px;
+        font-size: 14px;
     }
     nav {
-        max-width: 400px;
+        max-width: 342px;
     }
     nav ul {
         align-items: center;
     }
+    .nav-dropdown-trigger {
+        padding: 30px 0px;
+    }
     nav .dropdown-icon {
         font-size: 16px;
         padding: 15px 0px;
+    }
+    .btn-wrapper.dmb .primary-btn {
+        padding: 15px 10px;
     }
     .dd-img-wrapper {
         height: 100px;
@@ -227,12 +236,9 @@ nav ul {
     .header-inner {
         padding: 10px 0;
     }
-    .logo {
-        max-width: 95px;
-    }
     nav {
         position: fixed;
-        top: 82px;
+        top: 68px;
         right: -100%;
         width: 100%;
         max-width: unset;
